# Blackfeather

./: .gitignore  README.md  pyproject.toml
blackfeather/: __init__.py  cli.py  config.py  report.py
blackfeather/identify/: base.py  dotnet.py  engine.py  generic.py  java.py  php.py  pickle.py  ruby.py
blackfeather/peel/: base.py  base64.py  engine.py  gzip_.py  hash.py  hex.py  html_entities.py  unicode_esc.py  url.py
