[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackfeather"
version = "0.1.0"
description = "Encoding pipeline reverser + deserialization payload factory"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
blackfeather = "blackfeather.cli:app"

[tool.setuptools.packages.find]
include = ["blackfeather*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
